добавили корзину и изменили заголовки

--- a/reverence/main/static/css/base.css
+++ b/reverence/main/static/css/base.css
@@ -314,3 +314,38 @@ input[type="number"]::-webkit-outer-spin-button {
 .card-on-catalog {
     color: #fff;
 }
+
+.table-head {
+    border-bottom: 1px solid #fff;
+}
+
+.table-p {
+    background-color: #000;
+    color: #fff;
+    text-align: right;
+}
+
+.c-item-img img {
+    width: 70px;
+    height: 100px;
+}
+
+.cart-item {
+    border-bottom: 1px solid #fff;
+    padding: 40px 0 40px 20px;
+}
+
+.c-quantity-form input {
+    width: 70px;
+    border-bottom: 1px solid #fff;
+    height: 35px;
+    color: #fff;
+}
+
+.c-item-total, .c-item-quantity, .c-item-price {
+    width: 120px;
+}
+
+.right-side-items {
+    text-align: right;
+}
