--- a/reverence/main/templates/main/product/detail.html
+++ b/reverence/main/templates/main/product/detail.html
@@ -1,7 +1,7 @@
 {% extends "main/base.html" %}
 {% load static %}
 
-{% block title %}{{ clothing_item.name }}{% endblock title %}
+{% block title %}Reverence Interlude - {{ clothing_item.name }}{% endblock title %}
 
 {% block content %}
     <div class="detail-product d-flex">
@@ -34,7 +34,7 @@
             {% if clothing_item.discount %}
                 <div class="cart-discount d-flex gap-2">
                     <p class="line">${{ clothing_item.price }}</p>
-                    <p class="price">${{ clothing_item.get_price_with_discount }}</p>
+                    <p class="price">${{ clothing_item.get_price_with_discount|floatformat:2 }}</p>
                 </div>
             {% else %}
                 <p class="detail-price">
@@ -42,7 +42,7 @@
                 </p>
             {% endif %}
             <div class="detail-cart-form">
-                <form action="" method="post">
+                <form action="{% url 'cart:cart_add' clothing_item.id %}" method="post">
                     {% csrf_token %}
                     <div class="select-size d-flex gap-2">
                         <label for="size">Size:</label>
